spades has been fixed

--- a/spades/3.6.0/Dockerfile
+++ b/spades/3.6.0/Dockerfile
@@ -1,18 +1,17 @@
-#################################################################
-# Dockerfile
-#
-# Version:          1
-# Software:         spades
-# Software Version: 3.6.0
-# Description:      Tools (written in C using htslib) for manipulating next-generation sequencing data
-# Website:          http://bioinf.spbau.ru/spades
-# Tags:             Genomics
-# Provides:         spades 3.6.0
-# Base Image:       biodckr/biodocker
-# Build Cmd:        docker build --rm -t biodckrdev/spades 3.6.0/.
-# Pull Cmd:         docker pull biodckrdev/spades
-# Run Cmd:          docker run --rm -it biodckrdev/spades <options> <files>
-#################################################################
+
+
+FROM biocontainers/biocontainers:latest
+
+# Metadata
+LABEL base.image="biocontainers:latest"
+LABEL version="1"
+LABEL software="spades"
+LABEL software.version="3.6.0"
+LABEL description="Tools (written in C using htslib) for manipulating next-generation sequencing data"
+LABEL website="http://bioinf.spbau.ru/spades"
+LABEL documentation="http://bioinf.spbau.ru/spades"
+LABEL license="https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html"
+LABEL tags="Genomics"
 
 # Set the base image to Ubuntu
 FROM biodckr/biodocker
