--- a/gatk/3.4/Dockerfile
+++ b/gatk/3.4/Dockerfile
@@ -8,7 +8,7 @@
 # Website:          https://www.broadinstitute.org/gatk/|https://github.com/broadgsa/gatk-protected/
 # Tags:             Genomics
 # Provides:         gatk 3.4|samtools 1.2|bwakit 0.7.12|picard tools 1.139
-# Base Image:       java:7
+################## BASE IMAGE ###################### :       java:7
 # Build Cmd:        docker build --rm -t biodckrdev/gatk 3.4/.
 # Pull Cmd:         docker pull biodckrdev/gatk
 # Run Cmd:          docker run --rm -it biodckrdev/gatk <options> <files>
