--- a/jellyfish/2.2.3/Dockerfile
+++ b/jellyfish/2.2.3/Dockerfile
@@ -8,7 +8,7 @@
 # Website:          https://github.com/gmarcais/Jellyfish
 # Tags:             Genomics
 # Provides:         jellyfish 2.2.3
-# Base Image:       biodckr/biodocker
+################## BASE IMAGE ###################### :       biodckr/biodocker
 # Build Cmd:        docker build --rm -t biodckrdev/jellyfish 2.2.3/.
 # Pull Cmd:         docker pull biodckrdev/jellyfish
 # Run Cmd:          docker run --rm -it biodckrdev/jellyfish <options> <files>
