--- a/magicblast/1.3.0/Dockerfile
+++ b/magicblast/1.3.0/Dockerfile
@@ -1,7 +1,7 @@
-# Base Image
+################## BASE IMAGE ######################
 FROM biocontainers/biocontainers:latest
 
-# Metadata
+################## METADATA ######################
 LABEL base.image="biocontainers:latest"
 LABEL version="3"
 LABEL software="magicblast"
@@ -13,7 +13,7 @@ LABEL License_file = /home/biodocker/bin/LICENSE
 LABEL tags="BLAST"
 
 
-# Maintainer
+################## MAINTAINER ######################
 MAINTAINER Roberto Vera Alvarez <r78v10a07@gmail.com>
 
 USER biodocker
