--- a/saintq/0.0.2/Dockerfile
+++ b/saintq/0.0.2/Dockerfile
@@ -1,7 +1,7 @@
-# Base Image
+################## BASE IMAGE ######################
 FROM biocontainers/biocontainers:latest
 
-# Metadata
+################## METADATA ######################
 LABEL base.image="biocontainers:latest"
 LABEL version="2"
 LABEL software="SAINTq"
@@ -12,7 +12,7 @@ LABEL documentation="http://saint-apms.sourceforge.net/Main.html"
 LABEL license="http://saint-apms.sourceforge.net/Main.html"
 LABEL tags="Proteomics"
 
-# Maintainer
+################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
 
 USER biodocker
