--- a/velvet/1.2.10/Dockerfile
+++ b/velvet/1.2.10/Dockerfile
@@ -1,7 +1,7 @@
 
 FROM biocontainers/biocontainers:latest
 
-# Metadata
+################## METADATA ######################
 LABEL base.image="biocontainers:latest"
 LABEL version="1"
 LABEL software="velvet"
