--- a/bedtools/2.25.0/Dockerfile
+++ b/bedtools/2.25.0/Dockerfile
@@ -1,7 +1,9 @@
-# Base Image
+################## BASE IMAGE ######################
+
 FROM biocontainers/biocontainers:latest
 
-# Metadata
+################## METADATA ######################
+
 LABEL base.image="biocontainers:latest"
 LABEL version="2"
 LABEL software="bedtools"
@@ -12,7 +14,7 @@ LABEL documentation="http://quinlanlab.org/tutorials/bedtools/bedtools.html"
 LABEL license="https://github.com/arq5x/bedtools2/blob/master/LICENSE"
 LABEL tags="Genomics"
 
-# Maintainer
+################## MAINTAINER ######################
 MAINTAINER Saulo Alves Aflitos <sauloal@gmail.com>
 
 RUN conda install bedtools=2.25.0
