--- a/bior_annotate/2.1.1/Dockerfile
+++ b/bior_annotate/2.1.1/Dockerfile
@@ -8,7 +8,7 @@
 # Website:          http://www.well.ox.ac.uk/cava|https://github.com/Steven-N-Hart/bior_annotate|http://bioinformaticstools.mayo.edu/research/bior/|https://github.com/BioinformaticsToolsAtMayo|https://github.com/Steven-N-Hart/bior_annotate
 # Tags:             Genomics
 # Provides:         BioR 2.1.1|htslib 1.2.1|samtools 1.2|bedtools 2.25.0|pysam 0.8.3|cava full 1.1.1|snpEff 4.1k
-# Base Image:       biodckrdev/bior_annotate
+################## BASE IMAGE ###################### :       biodckrdev/bior_annotate
 # Build Cmd:        docker build --rm -t biodckrdev/bior_annotate 2.1.1/.
 # Pull Cmd:         docker pull biodckrdev/bior_annotate
 # Run Cmd:          docker run --rm -it biodckrdev/bior_annotate bash
