--- a/bowtie2/2.2.9/Dockerfile
+++ b/bowtie2/2.2.9/Dockerfile
@@ -1,7 +1,8 @@
-# Base Image
+################## BASE IMAGE ######################
+
 FROM biocontainers/biocontainers:latest
 
-# Metadata
+################## METADATA ######################
 LABEL base.image="biocontainers:latest"
 LABEL version="1"
 LABEL software="bowtie2"
@@ -12,8 +13,10 @@ LABEL documentation="http://bowtie-bio.sourceforge.net/bowtie2/index.shtml"
 LABEL license="http://bowtie-bio.sourceforge.net/bowtie2/index.shtml"
 LABEL tags="Genomics"
 
-# Maintainer
+################## MAINTAINER ######################
 MAINTAINER Saulo Alves Aflitos <sauloal@gmail.com>
+
+################## INSTALLATION ######################
 
 ENV ZIP=bowtie2-2.2.9-linux-x86_64.zip
 ENV URL=https://github.com/BenLangmead/bowtie2/releases/download/v2.2.9/
