--- a/bwa/0.7.15/Dockerfile
+++ b/bwa/0.7.15/Dockerfile
@@ -1,7 +1,7 @@
-# Base Image
+################## BASE IMAGE ######################
 FROM biocontainers/biocontainers:latest
 
-# Metadata
+################## METADATA ######################
 LABEL base.image="biocontainers:latest"
 LABEL version="2"
 LABEL software="bwa"
@@ -12,8 +12,10 @@ LABEL documentation="http://bio-bwa.sourceforge.net/"
 LABEL license="http://bio-bwa.sourceforge.net/"
 LABEL tags="Genomics"
 
-# Maintainer
+################## MAINTAINER ######################
 MAINTAINER Saulo Alves Aflitos <sauloal@gmail.com>
+
+################## INSTALLATION ######################
 
 RUN conda install bwa=0.7.15
 
