--- a/comet/2015020/Dockerfile
+++ b/comet/2015020/Dockerfile
@@ -1,7 +1,7 @@
-# Base Image
+################## BASE IMAGE ######################
 FROM biocontainers/biocontainers:latest
 
-# Metadata
+################## METADATA ######################
 LABEL base.image="biocontainers:latest"
 LABEL version="3"
 LABEL software="Comet"
@@ -12,8 +12,10 @@ LABEL documentation="http://comet-ms.sourceforge.net/parameters/parameters_20160
 LABEL license="http://comet-ms.sourceforge.net/"
 LABEL tags="Proteomics"
 
-# Maintainer
+################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
+
+################## INSTALLATION ######################
 
 USER biodocker
 
