--- a/crux/2.1/Dockerfile
+++ b/crux/2.1/Dockerfile
@@ -1,7 +1,7 @@
-# Base Image
+################## BASE IMAGE ######################
 FROM biocontainers/biocontainers:latest
 
-# Metadata
+################## METADATA ######################
 LABEL base.image="biocontainers:latest"
 LABEL version="2"
 LABEL software="crux"
@@ -12,8 +12,10 @@ LABEL documentation="http://cruxtoolkit.sourceforge.net/"
 LABEL license="http://cruxtoolkit.sourceforge.net/"
 LABEL tags="Proteomics"
 
-# Maintainer
+################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
+
+################## INSTALLATION ######################
 
 USER biodocker
 
