--- a/dia-umpire/2.1.2/Dockerfile
+++ b/dia-umpire/2.1.2/Dockerfile
@@ -1,7 +1,7 @@
-# Base Image
+################## BASE IMAGE ######################
 FROM biocontainers/biocontainers:latest
 
-# Metadata
+################## METADATA ######################
 LABEL base.image="biocontainers:latest"
 LABEL version="3"
 LABEL software="DIA-Umpire"
@@ -12,7 +12,7 @@ LABEL documentation="http://diaumpire.sourceforge.net"
 LABEL license="http://diaumpire.sourceforge.net"
 LABEL tags="Proteomics"
 
-# Maintainer
+################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
 
 USER root
