--- a/emboss/6.5.7/Dockerfile
+++ b/emboss/6.5.7/Dockerfile
@@ -1,7 +1,7 @@
-# Base Image
+################## BASE IMAGE ######################
 FROM biocontainers/biocontainers:latest
 
-# Metadata
+################## METADATA ######################
 LABEL base.image="biocontainers:latest"
 LABEL version="1"
 LABEL software="emboss"
@@ -12,7 +12,7 @@ LABEL documentation="http://emboss.sourceforge.net/docs/"
 LABEL license="http://emboss.sourceforge.net/licence/"
 LABEL tags="Proteomics"
 
-# Maintainer
+################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
 
 RUN conda install emboss=6.5.7
