--- a/stacks/1.41/Dockerfile
+++ b/stacks/1.41/Dockerfile
@@ -1,8 +1,8 @@
 
-# Base Image
+################## BASE IMAGE ######################
 FROM biocontainers/biocontainers:latest
 
-# Metadata
+################## METADATA ######################
 LABEL base.image="biocontainers:latest"
 LABEL version="1.2.1"
 LABEL software="Stacks"
