--- a/tandem/10-12-01-1/Dockerfile
+++ b/tandem/10-12-01-1/Dockerfile
@@ -1,7 +1,7 @@
-# Base Image
+################## BASE IMAGE ######################
 FROM biocontainers/biocontainers:latest
 
-# Metadata
+################## METADATA ######################
 LABEL base.image="biocontainers:latest"
 LABEL version="2"
 LABEL software="X!Tandem"
@@ -12,7 +12,7 @@ LABEL documentation="http://www.thegpm.org/tandem/"
 LABEL license="http://www.thegpm.org/tandem/"
 LABEL tags="Proteomics"
 
-# Maintainer
+################## MAINTAINER ######################
 MAINTAINER Felipe da Veiga Leprevost <felipe@leprevost.com.br>
 
 RUN ZIP=tandem-linux-10-12-01-1.zip && \
