--- a/fastqc/0.11.15/Dockerfile
+++ b/fastqc/0.11.15/Dockerfile
@@ -16,6 +16,7 @@ LABEL tags="General"
 ################## MAINTAINER ######################
 MAINTAINER Alicia Mastretta-Yanes <amastretta@conabio.gob.mx>
 
+################## INSTALLATION ######################
 USER root
 
 ENV DST=/tmp
